--- a/Detail_/Book_Detail_Option_Cell.xib
+++ b/Detail_/Book_Detail_Option_Cell.xib
@@ -76,7 +76,7 @@
                             <constraint firstAttribute="width" constant="157" id="hUO-9E-AA4"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <color key="textColor" red="0.1137254902" green="0.32156862749999998" blue="0.40000000000000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="textColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -85,10 +85,11 @@
                         </userDefinedRuntimeAttributes>
                     </label>
                     <button hidden="YES" opaque="NO" clipsSubviews="YES" tag="6" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4n6-1z-9gG">
-                        <rect key="frame" x="19" y="-1" width="376" height="52"/>
+                        <rect key="frame" x="32" y="-1" width="350" height="52"/>
                         <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="52" id="VD8-f2-HTj"/>
+                            <constraint firstAttribute="width" constant="350" id="ayd-JR-q45"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
                         <state key="normal" title="Đọc ngay">
@@ -111,11 +112,9 @@
                     <constraint firstItem="4n6-1z-9gG" firstAttribute="centerY" secondItem="4Na-T0-kFz" secondAttribute="centerY" id="aLo-9x-U6a"/>
                     <constraint firstItem="4n6-1z-9gG" firstAttribute="centerX" secondItem="4Na-T0-kFz" secondAttribute="centerX" id="eI9-R5-9aL"/>
                     <constraint firstItem="Zm6-7I-Phy" firstAttribute="centerY" secondItem="4Na-T0-kFz" secondAttribute="centerY" id="iEE-UK-EWc"/>
-                    <constraint firstItem="4n6-1z-9gG" firstAttribute="leading" secondItem="4Na-T0-kFz" secondAttribute="leading" constant="19" id="o6R-sU-XO6"/>
                     <constraint firstItem="hqd-Vx-jHm" firstAttribute="centerY" secondItem="4Na-T0-kFz" secondAttribute="centerY" id="pkm-7d-spl"/>
                     <constraint firstAttribute="trailing" secondItem="n2W-Md-J2u" secondAttribute="trailing" constant="10" id="ruW-jl-rsP"/>
                     <constraint firstItem="1cq-RL-Ymg" firstAttribute="centerY" secondItem="4Na-T0-kFz" secondAttribute="centerY" id="t0f-n4-EIW"/>
-                    <constraint firstAttribute="trailing" secondItem="4n6-1z-9gG" secondAttribute="trailing" constant="19" id="udS-EV-dzQ"/>
                 </constraints>
             </collectionViewCellContentView>
             <size key="customSize" width="414" height="56"/>
