--- a/Auth_/PC_Login_ViewController.xib
+++ b/Auth_/PC_Login_ViewController.xib
@@ -341,7 +341,7 @@
                         <constraint firstAttribute="width" constant="146" id="Y1J-lZ-tue"/>
                         <constraint firstAttribute="height" constant="44" id="umH-Zd-50N"/>
                     </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                    <fontDescription key="fontDescription" type="system" weight="light" pointSize="17"/>
                     <state key="normal" title="Quên mật khẩu">
                         <color key="titleColor" red="0.14117647059999999" green="0.4039215686" blue="0.47450980390000003" alpha="1" colorSpace="calibratedRGB"/>
                     </state>
