--- a/Tabbar_/Book_List_Cell.xib
+++ b/Tabbar_/Book_List_Cell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="167"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W3e-Rb-1Cr">
+                    <view tag="100" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W3e-Rb-1Cr">
                         <rect key="frame" x="20" y="7" width="90" height="130"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
